AuthConfig enforces the require_authentication flag for negotiated authentication, and validates authorizer compatibility with the authentication configuration